--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Assignment One</title>
 </head>
 <body>
     <!-- Bismillahir Rahmanir Rahim .header start -->
     <header>
-
+        <div class="header">
+            <h4 class="header-sub-title">Happy New Year</h4>
+            <h1 class="header-title">New Year Party Celebration</h1>
+        </div>
     </header>
     <!-- Alhamdulillah header done -->
 
     <!-- main start -->
     <main>
-
+        <section class="discount">
+            <h1 class="discount-offer">65% OFF</h1>
+            <h4 class="discount-offer-sub-title">OUR HOLIDAY DEALS ARE BETTER</h4>
+            <h2 class="discount-offer-title">ALL CATEGORIES</h2>
+            <img class="discount-photo" src="./img/New Year Photo.png" alt="">
+        </section>
     </main>
     <!-- Alhamdulillah main done -->
 
