--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
             <h2 class="discount-offer-title">ALL CATEGORIES</h2>
             <img class="discount-photo" src="./img/New Year Photo.png" alt="">
         </section>
+        <section class="welcome">
+            <div class="twin">
+                <h1 class="welcome-title">Welcome to midnight party</h1>
+                <p class="welcome-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="only-2024">
+                <img class="only" src="./img/Group 70.png" height="250px" width="300px" alt="">
+            </div>
+        </section>
+        <section class="gradient">
+            <h3 class="red">Place:</h3>
+            <h3 class="black">New Park Hotel</h3><br>
+            <h3 class="red">Date:</h3>
+            <h3 class="black">31 December Night 2023</h3><br>
+            <h3 class="red">Time:</h3>
+            <h3 class="black">Evening 7.30 pm to 12.30 am</h3><br>
+            <button>JOIN NOW</button>
+        </section>
     </main>
+    <article>
+        
+    </article>
     <!-- Alhamdulillah main done -->
 
     <!-- simple footer start -->
