--- a/index.html
+++ b/index.html
@@ -43,7 +43,24 @@
             <button>JOIN NOW</button>
         </section>
     </main>
-    <article>
+    <article class="number-one">
+        <div class="one">
+            <h5 class="article-sub-title">NEW BEST OFFER</h5>
+            <h1 class="article-title">Coming Soon</h1>
+            <p class="article-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="two">
+            <div class="box">
+                <img src="./img/Ellipse 1.png" alt="">
+            </div>
+        </div>
+        <div class="three">
+            <h1 class="article-sub-title">2024</h1>
+            <p class="article-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img  class="article-img" src="./img/Group 96.png" alt="">
+        </div>
+    </article>
+    <article class="number-two">
         
     </article>
     <!-- Alhamdulillah main done -->
