--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Assignment One</title>
 </head>
@@ -111,10 +116,12 @@
                 molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         </div>
         <br>
-        
-            <input class="gmail" type="email" placeholder="user@gmail.com" style="background-color: white; margin-bottom: 20px; border: none; border-radius: 20px; padding: 10px;">
-            <input class="btn" type="button" value="Subscribe"  style="background-color: red; padding: 10px; border: none; border-radius: 20px; margin-bottom: 20px;">
-        
+
+        <input class="gmail" type="email" placeholder="user@gmail.com"
+            style="background-color: white; margin-bottom: 20px; border: none; border-radius: 20px; padding: 10px;">
+        <input class="btn" type="button" value="Subscribe"
+            style="background-color: red; padding: 10px; border: none; border-radius: 20px; margin-bottom: 20px;">
+
 
     </section>
     <!-- Alhamdulillah main done -->
